added product page from ma2

--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -7,3 +7,16 @@
   padding: 10px;
   border-radius: 10px;
 }
+
+.intro__text {
+  color: white;
+  font-family: "Libre Baskerville", serif;
+  font-size: 45px;
+  padding: 10px;
+}
+
+.intro__categories {
+  font-size: 25px;
+  font-style: italic;
+  color: #f2c029;
+}
