--- a/sass/partials/_customs.scss
+++ b/sass/partials/_customs.scss
@@ -14,6 +14,23 @@ footer {
   background-image: url("../../images/tileable_wood_texture.png");
 }
 
+#favorite,
+#basket,
+#user {
+  cursor: pointer;
+}
+
+#favorite,
+#basket {
+  width: 45px;
+}
+
+#user {
+  align-self: center;
+  font-size: 30px;
+  margin-left: 5px;
+}
+
 body {
   background-image: url("../../images/white_wall_hash.png");
 }
@@ -30,23 +47,15 @@ body {
   text-transform: uppercase;
 }
 
-#favorite,
-#user {
-  padding: 15px;
-  cursor: pointer;
-}
-
-.col-12 {
-  margin: 10px 0;
-}
-
 .seasonal,
-.lamps {
+.lamps,
+.intro {
   height: 500px;
 }
 
 .seasonal__pic,
-.lamps__pic {
+.lamps__pic,
+.intro__pic {
   height: 100%;
   background-image: url("../images/interior-fall-comfy2.jpg");
   background-repeat: no-repeat;
@@ -55,17 +64,39 @@ body {
   border-radius: 5px;
 }
 
+.intro__pic {
+  background-image: url("../../images/intro-homedecor.jpg");
+  filter: drop-shadow(5px 5px 10px rgb(91, 91, 91));
+  border-radius: 0;
+}
+
 .lamps__pic {
   background-image: url("../images/lamps-comfy3.jpg");
 }
 
 .seasonal__text,
-.lamps__text {
+.lamps__text,
+.intro__text {
   text-align: center;
   position: absolute;
   top: 60%;
   left: 50%;
   transform: translate(-50%, -50%);
+}
+
+.product-pic__heart,
+.product-pic__basket {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  cursor: pointer;
+  width: 45px;
+  background-color: white;
+  border-radius: 50%;
+}
+
+.product-pic__basket {
+  left: 60px;
 }
 
 .product-pic {
@@ -82,34 +113,33 @@ body {
   color: white;
 }
 
-.product-pic__heart {
-  position: absolute;
-  bottom: 20px;
-  left: 20px;
-  cursor: pointer;
-}
-
 .card-body {
   text-align: center;
+  position: relative;
 }
 
 .price {
+  display: flex;
+  justify-content: center;
+}
+
+.prices {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.price__current {
+.price__discount {
   color: #d95204;
+  font-size: 35px;
+}
+
+.price__current {
   font-size: 35px;
 }
 
 .price__original {
   text-decoration: line-through;
-}
-
-h6 {
-  color: black;
 }
 
 .button {
@@ -147,4 +177,20 @@ footer {
   flex-shrink: 0;
   padding-top: 20px;
   margin-top: 20px;
+}
+
+/* products */
+
+.category {
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-color: black;
+  color: white;
+  padding: 5px;
+  border-bottom-left-radius: 5px;
+}
+
+h6 {
+  color: black;
 }
