--- a/css/style.css
+++ b/css/style.css
@@ -199,8 +199,12 @@ footer {
   text-align: center;
   -ms-flex-negative: 0;
       flex-shrink: 0;
-  padding-top: 20px;
+  padding: 20px 0;
   margin-top: 20px;
+}
+
+.fab {
+  font-size: 35px;
 }
 
 /* products */
