--- a/sass/partials/_customs.scss
+++ b/sass/partials/_customs.scss
@@ -175,8 +175,12 @@ body {
 footer {
   text-align: center;
   flex-shrink: 0;
-  padding-top: 20px;
+  padding: 20px 0;
   margin-top: 20px;
+}
+
+.fab {
+  font-size: 35px;
 }
 
 /* products */
