--- a/sass/partials/_customs.scss
+++ b/sass/partials/_customs.scss
@@ -79,7 +79,7 @@ body {
 .intro__text {
   text-align: center;
   position: absolute;
-  top: 60%;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
@@ -116,6 +116,11 @@ body {
 .card-body {
   text-align: center;
   position: relative;
+}
+
+.card-text {
+  text-align: left;
+  margin-top: 20px;
 }
 
 .price {
