--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -1,22 +1,24 @@
 .seasonal__text,
 .lamps__text {
   color: white;
-  font-family: "Libre Baskerville", serif;
-  font-size: 45px;
-  background-color: rgba(0, 0, 0, 0.2);
+  font-family: "Ovo", serif;
+  font-size: 65px;
   padding: 10px;
   border-radius: 10px;
+  text-transform: uppercase;
+  width: 400px;
+  max-width: 100%;
 }
 
 .intro__text {
   color: white;
-  font-family: "Libre Baskerville", serif;
-  font-size: 45px;
+  font-family: "Ovo", serif;
+  font-size: 40px;
   padding: 10px;
+  text-transform: uppercase;
 }
 
 .intro__categories {
-  font-size: 25px;
-  font-style: italic;
+  font-size: 65px;
   color: #f2c029;
 }
