--- a/sass/partials/_typography.scss
+++ b/sass/partials/_typography.scss
@@ -10,6 +10,11 @@
   max-width: 100%;
 }
 
+nav {
+  font-family: "Mulish", serif;
+  font-weight: 600;
+}
+
 .intro__text {
   color: white;
   font-family: "Ovo", serif;
