--- a/sass/style.scss
+++ b/sass/style.scss
@@ -2,7 +2,7 @@ $light: white;
 $navbar-light-color: black;
 $navbar-light-active-color: white;
 $primary: black;
-$font-family-sans-serif: "Open Sans";
+$font-family-sans-serif: "Mulish";
 $navbar-light-toggler-border-color: black;
 $h6-font-size: 0.8em;
 
