added a third font-family for call-to-action buttons

--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,11 @@ h6, .h6 {
   color: black;
 }
 
+nav {
+  font-family: "Mulish", serif;
+  font-weight: 600;
+}
+
 .seasonal__text,
 .lamps__text {
   color: white;
@@ -237,11 +242,6 @@ h6, .h6 {
   text-transform: uppercase;
   width: 400px;
   max-width: 100%;
-}
-
-nav {
-  font-family: "Mulish", serif;
-  font-weight: 600;
 }
 
 .intro__text {
@@ -255,6 +255,10 @@ nav {
 .intro__categories {
   font-size: 65px;
   color: #f2c029;
+}
+
+.button {
+  font-family: "Nanum Gothic";
 }
 
 :root {
