--- a/sass/partials/_customs.scss
+++ b/sass/partials/_customs.scss
@@ -55,23 +55,33 @@ body {
 
 .seasonal__pic,
 .lamps__pic,
-.intro__pic {
+.intro__pic,
+.intro__homepic {
   height: 100%;
-  background-image: url("../images/interior-fall-comfy2.jpg");
+  background-image: url("../images/interior-fall-comfy4.jpg");
   background-repeat: no-repeat;
   background-position: center;
   position: relative;
   border-radius: 5px;
 }
 
-.intro__pic {
+.intro__pic,
+.intro__homepic {
   background-image: url("../../images/intro-homedecor.jpg");
   filter: drop-shadow(5px 5px 10px rgb(91, 91, 91));
   border-radius: 0;
 }
 
+#intro {
+  height: 600px;
+}
+
+.intro__homepic {
+  background-image: url("../../images/darkLounge.jpg");
+}
+
 .lamps__pic {
-  background-image: url("../images/lamps-comfy3.jpg");
+  background-image: url("../../images/lampsDark.jpg");
 }
 
 .seasonal__text,
@@ -107,11 +117,13 @@ body {
   position: absolute;
   top: 10px;
   left: 10px;
-  background-color: #d95204;
+  background-color: black;
   padding: 25px 20px;
   border-radius: 50%;
   color: white;
 }
+
+/* #d95204 */
 
 .card-body {
   text-align: center;
